--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         apiUrl: 'https://supporttest.brightpattern.com:443/clientweb/api/v1',
         tenantUrl: 'supporttest.brightpattern.com',
         width: 300,
-        chatPath: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/',
+        chatPath: 'https://kellyhunt.github.io/',
         hidden: false,
         sound_notification: false,
         logging: false,
@@ -43,4 +43,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="text/javascript" src="https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/js/snippet.js"></script>
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.jsß"></script>
