--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.jsß"></script>
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
