--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         /* Default customer data, it can be collected on current site's context*/
         /* Customer data also can be requested via "Request Input" block + "MobileChatCustomerData" formName */
 /*
+<button type="button">Chat With Me!</button>
    autostart: false,
         autostartpages: [
                 'https://support.yourpage.com',  // add comma for second line and see example below
