--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 
    autostart: false,
         autostartpages: [
-                'https://support.yourpage.com',  // add comma for second line and see example below
+                'https://kellyhunt.github.io/',  // add comma for second line and see example below
                 //'https://otherpage.yourpage.com'
             ],
         hidden: true, // sets method of delivery of chat to 'whitelist like'
