--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<button type="button">Chat With Me!</button>
+<button onClick="window.openChat(true)" type="button">Chat With Me!</button>
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'b86a1b05519542c0837ada93ebf31cf7',
@@ -21,7 +21,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 
    autostart: false,
         autostartpages: [
-                'https://kellyhunt.github.io/',  // add comma for second line and see example below
+                'https://mypage.com' // add comma for second line and see example below
                 //'https://otherpage.yourpage.com'
             ],
         hidden: true, // sets method of delivery of chat to 'whitelist like'
