--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
 <button onClick="window.openChat(true);" type="button">Chat With Me!</button>
+<a href="url">Click Here to Chat</a>
+
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'b86a1b05519542c0837ada93ebf31cf7',
