Link and Button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
 <button onClick="window.openChat(true);" type="button">Chat With Me!</button>
-<a href="url">Click Here to Chat</a>
+<br>
+<br>
+<u onClick="window.openChat(true);">Click Here to Chat</u>
 
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
