--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         hidden: true, // sets method of delivery of chat to 'whitelist like'
         pages: [
               
-                     'file:///C:/SupportChat/SupportChat.html',
-                   'https://kellyhunt.github.io/index.html'
+                     'file:///C:/SupportChat/SupportChat.html'
             ]
  
          first_name: '',
