--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
 <button onClick="window.openChat(true);" type="button">Chat With Me!</button>
 <br>
 <br>
