--- a/index.htmlold.html
+++ b/index.htmlold.html
@@ -1,7 +1,11 @@
-
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
+<button onClick="window.openChat(true);" type="button">Chat With Me!</button>
+<br>
+<br>
+<u onClick="window.openChat(true);">Click Here to Chat</u>
 
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
@@ -39,8 +43,3 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 
 <script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
-
-<button onClick="window.openChat(true);" type="button">Chat With Me!</button>
-<br>
-<br>
-<u onClick="window.openChat(true);">Click Here to Chat</u>
