--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
          last_name: '',
          email: '',
          account_number: '',
-         phone_number: '', /
+         phone_number: '', 
          location : {
              latitude: 37.5151481,
              longitude: -122.4183997
