--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         hidden: false,
         sound_notification: false,
         logging: false,
-        sound_notification_file: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3'
+        sound_notification_file: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3',
 
         /* Default customer data, it can be collected on current site's context*/
         /* Customer data also can be requested via "Request Input" block + "MobileChatCustomerData" formName */
@@ -25,7 +25,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         "https://dl.dropboxusercontent.com/s/b0z5hdy73odkqjm/new_chat1.html"
         ]
  
-         first_name: '',
+ /*        first_name: '',
          last_name: '',
          email: '',
          account_number: '',
@@ -34,7 +34,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
              latitude: 37.5151481,
              longitude: -122.4183997
          }
- 
+ */
     };
 </script>
 
