--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         tenantUrl: 'supporttest.brightpattern.com',
         width: 300,
         chatPath: 'https://kellyhunt.github.io/',
-        hidden: false,
+        hidden: true,
         sound_notification: false,
         logging: false,
         sound_notification_file: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3',
