--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="text/javascript" src="'https://kellyhunt.github.io/js/snippet.js"></script>
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
  
