--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         apiUrl: 'https://138.68.58.78:443/clientweb/api/v1',
         tenantUrl: 'csmdemo.brightpattern.com',
         width: 300,
-        chatPath: ''https://kellyhunt.github.io/',
+        chatPath: 'https://kellyhunt.github.io/',
         hidden: false,
         sound_notification: false,
         logging: false,
