--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
@@ -10,26 +9,20 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         apiUrl: 'https://epoch.brightpattern.com:443/clientweb/api/v1',
         tenantUrl: 'epoch.brightpattern.com',
         width: 300,
-		chatPath: 'https://kellyhunt.github.io/',
+        chatPath: https://kellyhunt.github.io/',
         hidden: false,
         sound_notification: false,
         logging: false,
-        sound_notification_file: 'https://epoch.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3',
+        sound_notification_file: 'https://epoch.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3'
 
         /* Default customer data, it can be collected on current site's context*/
         /* Customer data also can be requested via "Request Input" block + "MobileChatCustomerData" formName */
-
-
-     pages: [
-	 "https://google.com",
-	 "https://dl.dropboxusercontent.com/s/b0z5hdy73odkqjm/new_chat1.html"
-        ]
- 
- /*        first_name: '',
+/*
+         first_name: '',
          last_name: '',
          email: '',
          account_number: '',
-         phone_number: '', 
+         phone_number: '', /
          location : {
              latitude: 37.5151481,
              longitude: -122.4183997
@@ -38,9 +31,5 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="https://kellyhunt.github.io/js/snippet.js"></script>
-
-<button onClick="window.openChat(true);" type="button">Chat With Me!</button>
-<br>
-<br>
-<u onClick="window.openChat(true);">Click Here to Chat</u>
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
+ 
