--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         apiUrl: 'https://epoch.brightpattern.com:443/clientweb/api/v1',
         tenantUrl: 'epoch.brightpattern.com',
         width: 300,
-		chatPath: 'https://epoch.brightpattern.com:443/clientweb/chat-client-v2/',
+		chatPath: 'https://kellyhunt.github.io/',
         hidden: true,
         sound_notification: false,
         logging: false,
@@ -38,7 +38,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="text/javascript" src="http://thefullerfam.net/webchat/js/snippet.js"></script>
+<script type="text/javascript" src="https://kellyhunt.github.io/js/snippet.js"></script>
 
 <button onClick="window.openChat(true);" type="button">Chat With Me!</button>
 <br>
