--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<script type="text/javascript" src="https://new.brightpattern.com/agentdesktop/app/lib/servicepatternapi-dev.js"></script>
+<script type="text/javascript" src="https://i9sports.brightpattern.com/agentdesktop/app/lib/servicepatternapi-dev.js"></script>
 <script type="text/javascript">
 
     function getParameterByName(name) {
