--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -759,10 +759,10 @@
                 $('#error-phone').css("display", "block");
                 noError = false;
             }
-            // if(extChatData.question === undefined || extChatData.question === '') {
-            //    $('#error-message').css("display", "block");
-            //    noError = false;
-            // }
+            if(extChatData.question === undefined || extChatData.question === '') {
+            $('#error-message').css("display", "block");
+             noError = false;
+            }
 
             if(noError) {
                 window.chatSession.sendFormData(currentFormRequestId, currentFormName, extChatData);
