--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -743,10 +743,10 @@
                 $('#error-first_name').css("display", "block");
                 noError = false;
             }
-            /*if(extChatData.last_name === undefined || extChatData.last_name === '') {
+            if(extChatData.last_name === undefined || extChatData.last_name === '') {
                 $('#error-last_name').css("display", "block");
                 noError = false;
-            }*/
+            }
             if(extChatData.email === undefined || extChatData.email === '') {
                 $('#error-phone').css("display", "block");
                 noError = false;
@@ -827,15 +827,18 @@
                 <div class="description">Please fill the following information:</div>
 
                 <div class="field-wrapper">
-                    <input id="first_name" type="text" class="input-field" name="first_name" placeholder="Full Name*" value="">
-                    <div id="error-first_name" class="error-balloon">Please, enter name</div>
+                    <input id="first_name" type="text" class="input-field" name="first_name" placeholder="First name*" value="">
+                    <div id="error-first_name" class="error-balloon">Please, enter first name</div>
                 </div>
 
-          
+                <div class="field-wrapper">
+                    <input id="last_name" type="text" class="input-field" name="last_name" placeholder="Last name*" value="">
+                    <div id="error-last_name" class="error-balloon">Please, enter last name</div>
+                </div>
 
                 <div class="field-wrapper">
-                    <input id="account_number" type="text" class="input-field" placeholder="Mastercode*" value="">
-                    <div id="error-account_number" class="error-balloon">Please, enter Mastercode</div>
+                    <input id="account_number" type="text" class="input-field" placeholder="Account id" value="">
+                    <div id="error-account_number" class="error-balloon">Please, enter account number</div>
                 </div>
 
                 <div class="field-wrapper">
