--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -837,7 +837,7 @@
                 </div>
 
                 <div class="field-wrapper">
-                    <input id="account_number" type="text" class="input-field" placeholder="Account id" value="">
+                    <input id="account_number" type="text" class="input-field" placeholder="Mastercode*" value="">
                     <div id="error-account_number" class="error-balloon">Please, enter account number</div>
                 </div>
 
