--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -751,6 +751,10 @@
                 $('#error-phone').css("display", "block");
                 noError = false;
             }
+            if(extChatData.account_number === undefined || extChatData.account_number === '') {
+                $('#error-phone').css("display", "block");
+                noError = false;
+            }
            /* if(extChatData.question === undefined || extChatData.question === '') {
                 $('#error-message').css("display", "block");
                 noError = false;
