--- a/client-chat-page_all_but_last_name.html
+++ b/client-chat-page_all_but_last_name.html
@@ -675,9 +675,9 @@
             $('#error-first_name').css("display", "none");
         });
 
-        /*$('#last_name').bind('focus', function() {
+        $('#last_name').bind('focus', function() {
             $('#error-last_name').css("display", "none");
-        });*/
+        });
         
       $('#account_number').bind('focus', function() {
             $('#error-account_number').css("display", "none");
@@ -747,10 +747,10 @@
                 $('#error-first_name').css("display", "block");
                 noError = false;
             }
-           /* if(extChatData.last_name === undefined || extChatData.last_name === '') {
+            if(extChatData.last_name === undefined || extChatData.last_name === '') {
                 $('#error-last_name').css("display", "block");
                 noError = false;
-            }*/
+            }
                 if(extChatData.account_number === undefined || extChatData.account_number === '') {
                 $('#error-account_number').css("display", "block");
                 noError = false;
@@ -840,7 +840,10 @@
                     <div id="error-first_name" class="error-balloon">Please, enter first name</div>
                 </div>
 
-            
+                <div class="field-wrapper">
+                    <input id="last_name" type="text" class="input-field" name="last_name" placeholder="Last name*" value="">
+                    <div id="error-last_name" class="error-balloon">Please, enter last name</div>
+                </div>
 
                 <div class="field-wrapper">
                     <input id="account_number" type="text" class="input-field" placeholder="Mastercode*" value="">
