--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -837,7 +837,7 @@
 
                 <div class="field-wrapper">
                     <input id="first_name" type="text" class="input-field" name="first_name" placeholder="First name*" value="">
-                    <div id="error-first_name" class="error-balloon">Please, enter first name</div>
+                    <div id="error-first_name" class="error-balloon">Please, enter your name/div>
                 </div>
 
             
