--- a/client-chat-page.html
+++ b/client-chat-page.html
@@ -836,8 +836,8 @@
                 <div class="description">Please fill the following information:</div>
 
                 <div class="field-wrapper">
-                    <input id="first_name" type="text" class="input-field" name="first_name" placeholder="First name*" value="">
-                    <div id="error-first_name" class="error-balloon">Please, enter your name/div>
+                    <input id="first_name" type="text" class="input-field" name="first_name" placeholder="Full Name*" value="">
+                    <div id="error-first_name" class="error-balloon">Please, enter your name</div>
                 </div>
 
             
