--- a/RakChat.html
+++ b/RakChat.html
@@ -6,10 +6,10 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'e451e9955d9e46358b48f555c7679e40',
         clientId: 'WebChat',
-        apiUrl: 'https://supporttest.brightpattern.com:9443/clientweb/api/v1',
+        apiUrl: 'https://rakuten3.brightpattern.com:9443/clientweb/api/v1',
         tenantUrl: 'rakuten3.brightpattern.com',
         width: 300,
-        chatPath: 'https://supporttest.brightpattern.com:9443/clientweb/chat-client-v2/',
+        chatPath: 'https://rakuten3.brightpattern.com:9443/clientweb/chat-client-v2/',
         hidden: false,
         sound_notification: false,
         logging: false,
@@ -31,5 +31,5 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 
-<script type="text/javascript" src="https://supporttest.brightpattern.com:9443/clientweb/chat-client-v2/js/snippet.js"></script>
+<script type="text/javascript" src="https://rakuten3.brightpattern.com:9443/clientweb/chat-client-v2/js/snippet.js"></script>
  
