--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     var dialNumber = function() {
-        window.bpspat.api.dialNumber("3008");
+        window.bpspat.api.dialNumber("18132173202");
     }
 	var setNotes = function() {
         window.bpspat.api.setNotes("Test notes");
