--- a/crm.html
+++ b/crm.html
@@ -9,7 +9,7 @@
 	<p>
 		Click to dial demo
 	</p>
-	<button id="dial">15555555555</button>
-	<script src="crm.js"></script>
+	<button id="dial">17193308659</button>
+	<script src="https://kellyhunt.github.io/crm.js"></script>
 </body>
 </html>
