--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -18,6 +18,6 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <label>Name:</label>
    <input type="text" id="sp-callback-name" placeholder="Name" />
    <label>Phone:</label>
-   <input type="tel" id="sp-callback-phone" placeholder="Phone" />
+   <input type="tel" id="sp-callback-phone" placeholder="17193308659" />
    <button id="sp-callback-submit">Request Call</button>
 </div>
