--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -16,9 +16,8 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <label>Request a callback</label>
    <label>&nbsp;</label>
    <label>Name:</label>
-   <input type="text" id="sp-callback-name" placeholder="Name" value="kelly.hunt@brightpattern.com" />
+   <input type="text" id="sp-callback-name" placeholder="Agent Email" value="kelly.hunt@brightpattern.com" />
    <label>Phone:</label>
-   <input type="tel" id="sp-callback-phone" placeholder="Phone" value="17193308659" />
-   <input type="email" id="sp-callback-email" placeholder="Email" />
-   <button id="sp-callback-submit">Request Call</button>
+   <input type="tel" id="sp-callback-phone" placeholder="Customer Phone" value="17193308659" />
+   <button id="sp-callback-submit">Start Call</button>
 </div>
