--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -13,7 +13,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 
 <script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
-   <label>Request a callback</label>
+   <label>Call Customer Back</label>
    <label>&nbsp;</label>
    <label>Name:</label>
    <input type="text" id="sp-callback-name" placeholder="Agent Email" value="kelly.hunt@brightpattern.com" />
