--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -15,9 +15,9 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
    <label>Call Customer Back</label>
    <label>&nbsp;</label>
-   <label>Name:</label>
+   <label>Agent Email</label>
    <input type="text" id="sp-callback-name" placeholder="Agent Email" value="kelly.hunt@brightpattern.com" />
-   <label>Phone:</label>
+   <label>Customer Phone:</label>
    <input type="tel" id="sp-callback-phone" placeholder="Customer Phone" value="17193308659" />
    <button id="sp-callback-submit">Start Call</button>
 </div>
