--- a/i9Test.html
+++ b/i9Test.html
@@ -1,7 +1,7 @@
 <form id=form1>
   FORM
   <input    name=a type=text value="FOO">
-  <input    name=b type=button value="BAR">
+  <input    name=b type=text value="BAR">
 </form>
 
 <button id="copy">COPY&rarr;</button>
