--- a/i9Test.html
+++ b/i9Test.html
@@ -9,12 +9,7 @@
 <form id=form2>
   HIDDEN FORM
   <input    name=a type=text>
-  <input    name=b type=button value="...">
-  <textarea name=c></textarea>
-  <select   name=d>
-    <option value="a">a</option>
-    <option value="b">b</option>
-  </select>
+  <input    name=b type=text>
 </form>
 
-<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
