--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -12,7 +12,9 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 
 <script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
    <input type="text" id="sp-callback-name" placeholder="Agent Email" value="kelly.hunt@brightpattern.com" style="visibility:hidden"/>
    <input type="tel" id="sp-callback-phone" placeholder="Customer Phone" value="17193308659" style="visibility:hidden"/>
    <button id="sp-callback-submit">Start Call</button>
 
+</div>
