--- a/WebCallBackNew.html
+++ b/WebCallBackNew.html
@@ -12,9 +12,13 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 
 <script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
-<div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
-   <input type="text" id="sp-callback-name" placeholder="Agent Email" value="kelly.hunt@brightpattern.com" />
-   <input type="tel" id="sp-callback-phone" placeholder="Customer Phone" value="17193308659" />
-   <button id="sp-callback-submit">Start Call</button>
-
+ <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
+   <label>Request a callback</label>
+   <label>&nbsp;</label>
+   <label>Name:</label>
+   <input type="text" id="sp-callback-name" placeholder="Name" />
+   <label>Phone:</label>
+   <input type="tel" id="sp-callback-phone" placeholder="Phone" />
+   <input type="email" id="sp-callback-email" placeholder="Email" />
+   <button id="sp-callback-submit">Request Call</button>
 </div>
