--- a/SupportTestWCB.html
+++ b/SupportTestWCB.html
@@ -18,6 +18,6 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <label>Name:</label>
    <input type="text" id="sp-callback-name" placeholder="Name" />
    <label>Phone:</label>
-   <input type="tel" id="sp-callback-phone_number" placeholder="Phone" />
+   <input type="tel" id="sp-callback-phone" placeholder="Phone" />
    <button id="sp-callback-submit">Request Call</button>
 </div>
