--- a/WSOL.html
+++ b/WSOL.html
@@ -4,7 +4,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <link type="text/css" rel="stylesheet" href="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '123123ABC',
+        appId: 'i9123456',
         apiUrl: 'https://workingsolutions.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'workingsolutions.brightpattern.com',
         chatPath: 'https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/'
