--- a/WSOL.html
+++ b/WSOL.html
@@ -4,7 +4,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <link type="text/css" rel="stylesheet" href="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: 'i9123456',
+        appId: '123123ABC',
         apiUrl: 'https://workingsolutions.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'workingsolutions.brightpattern.com',
         chatPath: 'https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/'
@@ -18,6 +18,6 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <label>Name:</label>
    <input type="text" id="sp-callback-name" placeholder="Name" />
    <label>Phone:</label>
-   <input type="tel" id="sp-callback-phone_number" placeholder="Phone" />
+   <input type="tel" id="sp-callback-phone" placeholder="Phone" />
    <button id="sp-callback-submit">Request Call</button>
 </div>
