--- a/Delta.html
+++ b/Delta.html
@@ -2,3 +2,25 @@
 </iframe>
 <script type="text/javascript" src="https://zingtree.com/js/iframeResizerSmart.js"></script>
 <script type="text/javascript">iFrameResize();</script>
+
+<!-- You have to put this piece of JavaScript code into your web page
+Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
+-->
+<link type="text/css" rel="stylesheet" href="https://delta.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<script type="text/javascript">
+    SERVICE_PATTERN_CHAT_CONFIG = {
+        appId: 'eea57cc6d9274b1ba72f22bb7b1a35a4',
+        apiUrl: 'https://delta.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'delta.brightpattern.com',
+        chatPath: 'https://delta.brightpattern.com/clientweb/chat-client-v4/'
+
+        /*        
+         // Default customer data, it can be collected on current site's context
+         first_name: '',
+         last_name: '',
+         email: '',
+         phone_number: ''
+ 		*/
+    };
+</script>
+<script src="https://delta.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
