--- a/i9TestCallBack.html
+++ b/i9TestCallBack.html
@@ -1,17 +1,17 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://i9sports.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: '123123ABC',
-        apiUrl: 'https://workingsolutions.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'workingsolutions.brightpattern.com',
-        chatPath: 'https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/'
+        apiUrl: 'https://i9sports.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'i9sports.brightpattern.com',
+        chatPath: 'https://i9sports.brightpattern.com/clientweb/chat-client-v4/'
     };
 </script>
 
-<script src="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://i9sports.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
    <label>Request a callback</label>
    <label>&nbsp;</label>
