--- a/Delta2.html
+++ b/Delta2.html
@@ -5,7 +5,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'e77b3b39eaf043e6b39603f9f29eaf7b',
-        apiUrl: 'https://delta.brightpattern.com/clientweb/api/v1',
+        apiUrl: 'https://kellyhunt.github.io/Delta',
         tenantUrl: 'delta.brightpattern.com',
         chatPath: 'https://delta.brightpattern.com/clientweb/chat-client-v4/'
 
@@ -18,7 +18,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://delta.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://kellyhunt.github.io/Delta/js/init.js"></script> 
 <script type="text/javascript">
 	function getUrlParameter(name) {
 		name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
