--- a/Deltabkup.html
+++ b/Deltabkup.html
@@ -32,7 +32,38 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 	SERVICE_PATTERN_CHAT_CONFIG['account_number']=bp_session_id;
 	SERVICE_PATTERN_CHAT_CONFIG['parameters']['ZingtreeSessionID']=bp_session_id;
 
-
+	// get zingtree form & session data
+	var xmlhttp = new XMLHttpRequest();
+	xmlhttp.open('GET', "https://zingtree.com/api/session/"+bp_session_id+"/get_form_data", true);
+	xmlhttp.onreadystatechange = function() {
+		if (xmlhttp.readyState == 4) {
+		    if(xmlhttp.status == 200) {
+			var data = JSON.parse(xmlhttp.responseText);
+			//console.log(data);
+			SERVICE_PATTERN_CHAT_CONFIG['first_name']=data["name"];
+			// get zingtree session steps data
+			var xmlhttp2 = new XMLHttpRequest();
+			xmlhttp2.open('GET', "https://zingtree.com/api/session/"+bp_session_id+"/get_session_data", true);
+			xmlhttp2.onreadystatechange = function() {
+				if (xmlhttp2.readyState == 4) {
+					if(xmlhttp2.status == 200) {
+						var data2 = JSON.parse(xmlhttp2.responseText);
+						//console.log(data2);
+						var history = "";
+						for(item in data2.path){
+							history += data2.path[item].question +": "+data2.path[item].button_text+"\r\n";
+							//console.log(data2.path[item].question);
+							//console.log(data2.path[item].button_text);
+						}
+						SERVICE_PATTERN_CHAT_CONFIG['email']=history;
+					 }
+				}
+			};
+			xmlhttp2.send(null);
+		     }
+		}
+	};
+	xmlhttp.send(null);
 
 	// auto-click the chat tab
 	document.addEventListener("DOMContentLoaded", function(event) { 
