--- a/Delta2.html
+++ b/Delta2.html
@@ -5,8 +5,8 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'e77b3b39eaf043e6b39603f9f29eaf7b',
-        autostartChat: false,
-        autostartVideocall: false,
+        autostartChat: true,
+        autostartVideocall: true,
         apiUrl: 'https://delta.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'delta.brightpattern.com',
         chatPath: 'https://delta.brightpattern.com/clientweb/chat-client-v4/',
