--- a/deltavideochat.html
+++ b/deltavideochat.html
@@ -7,6 +7,7 @@
         apiUrl: 'https://delta.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'delta.brightpattern.com',
         chatPath: 'https://delta.brightpattern.com/clientweb/chat-client-v4/',
+        returnUrl: "https://zingtree.com/host.php?tree_id=191340081&style=buttons&nopermalink=1&persist_names=Reset&persist_node_ids=48",
         parameters: {}
     };
 	function getUrlParameter(name) {
