--- a/SupportTest.html
+++ b/SupportTest.html
@@ -32,4 +32,22 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 
 <script type="text/javascript" src="https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/js/snippet.js"></script>
- 
+
+    SERVICE_PATTERN_CHAT_CONFIG = {
+        appId: '06290711',
+        apiUrl: 'https://supporttest.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'supporttest.brightpattern.com',
+        chatPath: 'https://supporttest.brightpattern.com/clientweb/chat-client-v4/'
+    };
+</script>
+
+<script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+ <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
+   <label>Request a callback</label>
+   <label>&nbsp;</label>
+   <label>Name:</label>
+   <input type="text" id="sp-callback-name" placeholder="Name" />
+   <label>Phone:</label>
+   <input type="tel" id="sp-callback-phone" placeholder="Phone" />
+   <button id="sp-callback-submit">Request Call</button>
+</div>
