--- a/ChatTestIW.html
+++ b/ChatTestIW.html
@@ -21,3 +21,11 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 <script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
+<div id="sp-callback-form" class="sp-callback-form">
+   <h1>Request a callback</h1>
+   <label>Name:</label>
+   <input type="text" id="sp-callback-name" required="">
+   <label>Phone number:</label>
+   <input type="text" id="sp-callback-phone" required="">
+   <button id="sp-callback-submit">Call me now</button>
+</div>
