--- a/SupportTest.html
+++ b/SupportTest.html
@@ -1,38 +1,32 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-
+<link type="text/css" rel="stylesheet" href="https://supporttest.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: 'b86a1b05519542c0837ada93ebf31cf7',
-        clientId: 'WebChat',
-        apiUrl: 'https://supporttest.brightpattern.com:443/clientweb/api/v1',
+        appId: '5fa94e7e9d9c4df1bd66bb0a639f1b44',
+        apiUrl: 'https://supporttest.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'supporttest.brightpattern.com',
-        width: 300,
-        chatPath: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/',
-        hidden: false,
-        sound_notification: false,
-        logging: false,
-        sound_notification_file: 'https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/media/ding.mp3'
+        chatPath: 'https://supporttest.brightpattern.com/clientweb/chat-client-v4/'
+        
+        
 
-        /* Default customer data, it can be collected on current site's context*/
-        /* Customer data also can be requested via "Request Input" block + "MobileChatCustomerData" formName */
-/*
+        /*        
+         // Default customer data, it can be collected on current site's context
          first_name: '',
          last_name: '',
          email: '',
-         account_number: '',
-         phone_number: '', /
-         location : {
-             latitude: 37.5151481,
-             longitude: -122.4183997
-         }
- */
+         phone_number: ''
+ 		*/
     };
 </script>
+<script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
 
-<script type="text/javascript" src="https://supporttest.brightpattern.com:443/clientweb/chat-client-v2/js/snippet.js"></script>
-
+<!-- You have to put this piece of JavaScript code into your web page
+Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
+-->
+<link type="text/css" rel="stylesheet" href="https://supporttest.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: '06290711',
         apiUrl: 'https://supporttest.brightpattern.com/clientweb/api/v1',
