--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <button id="sp-callback-submit">Request Call</button>
 </div>
 
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDPt5QmVaBy5BjTFsBVWu-cKdong9o_95w
+    &q=Space+Needle,Seattle+WA" allowfullscreen>
+</iframe>
+
 </body>
 
 </html>
