--- a/CorpChat.html
+++ b/CorpChat.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://iw.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://corp.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '424d2d80b9654f9d8d57c7c879551d17',
-        apiUrl: 'https://iw.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'iw.brightpattern.com',
-        chatPath: 'https://iw.brightpattern.com/clientweb/chat-client-v4/'
+        appId: '9e3aefb5d05040bd9623be97a0cb92c8',
+        apiUrl: 'https://corp.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'corp.brightpattern.com',
+        chatPath: 'https://corp.brightpattern.com/clientweb/chat-client-v4/'
         
         
 
@@ -20,4 +20,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://iw.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
+<script src="https://corp.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
