--- a/EpochSample.html
+++ b/EpochSample.html
@@ -1,6 +1,7 @@
 <link type="text/css" rel="stylesheet" href="https://epoch.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
+       callbackAppId: '8ff1e394bd7c4abd80dbbb7fce6cbb67',
         appId: 'cebf295187c648e190758efbf2b393d9',
         apiUrl: 'https://epoch.brightpattern.com/clientweb/api/v1',
         tenantUrl: 'epoch.brightpattern.com',
