--- a/EpochSample.html
+++ b/EpochSample.html
@@ -19,3 +19,97 @@
     };
 </script>
 <script src="https://epoch.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
+<!--Custom Callback Form CSS styles-->
+<style type="text/css">
+    .sp-callback-form2.sended {
+        position:relative;
+    }
+
+    .sp-callback-form2.sended *{
+        visibility: hidden;
+    }
+    .sp-callback-form2.sended::before{
+        visibility: visible;
+        position:absolute;
+        content:"We will call you soon";
+        max-width:100%;
+        left:50%;
+        top:50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    .sp-callback-form2 {
+        font-family: Tahoma, Verdana, sans-serif;
+        border: 1px solid #B0B0B0;
+        padding: 16px;
+        display: inline-block;
+        border-radius: 2px;
+        -moz-box-shadow: 2px 2px 2px #B0B0B0;
+        -webkit-box-shadow: 2px 2px 2px #B0B0B0;
+        box-shadow: 2px 2px 2px #B0B0B0;
+    }
+    .sp-callback-form2 label {
+        color: #696969;
+        display: block;
+        font-size: 13px;
+        margin-bottom: 4px;
+    }
+
+    .sp-callback-form2 input {
+        border-radius: 4px;
+        border: 2px solid #ccc;
+        line-height: 24px;
+        display: block;
+        margin-bottom: 10px;
+        padding: 0 4px;
+    }
+
+    .sp-callback-form2 button {
+        background: #3B64B3;
+        border: none;
+        color: white;
+        border-radius: 2px;
+        padding: 8px;
+    }
+
+
+    .sp-callback-form2 button + button {
+        margin-left: 10px;
+    }
+</style>
+
+<!--Custom Callback Form JS (call button click handler)-->
+<script type="text/javascript">
+    document.getElementById("sp-callback-submit2").addEventListener("click", function(){
+
+        var spcc = SERVICE_PATTERN_CHAT_CONFIG;
+
+        var appId = spcc.callbackAppId || spcc.appId;
+
+        var xhrOptions = {
+            type: 'POST',
+            url: spcc.apiUrl + '/chats?tenantUrl=' + encodeURIComponent(spcc.tenantUrl) + "&timestamp=" + (new Date().getTime()),
+            crossDomain: true,
+            xhrFields: {
+                withCredentials: true
+            },
+            contentType: 'application/json; charset=utf-8',
+            headers: {
+                Authorization: 'MOBILE-API-140-327-PLAIN appId="' + appId + '", clientId="WebChat"'
+            },
+            dataType: 'json',
+            data: JSON.stringify({
+                phone_number: $('#sp-callback-phone_number2').val() || spcc.phone_number,
+                parameters: {
+                    first_name: spcc.first_name,
+                    last_name: spcc.last_name,
+                    email: spcc.email
+                }
+            })
+        };
+
+        $.ajax(xhrOptions);
+        $('#sp-callback-form2').addClass('sended');
+    });
+</script>
