--- a/EpochSample.html
+++ b/EpochSample.html
@@ -19,6 +19,12 @@
     };
 </script>
 <script src="https://epoch.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script>
+<!--Custom Callback Form HTML markup-->
+<div id="sp-callback-form2" class="sp-callback-form2">
+    <label>Call me</label>
+    <input type="text" id="sp-callback-phone_number2" placeholder="phone number" />
+    <button id="sp-callback-submit2">Send</button>
+</div>
 <!--Custom Callback Form CSS styles-->
 <style type="text/css">
     .sp-callback-form2.sended {
