--- a/index.html
+++ b/index.html
@@ -112,17 +112,20 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<!-- You have to put this piece of JavaScript code into your web page
+Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
+-->
+<link type="text/css" rel="stylesheet" href="https://supporttest.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '123123ABC',
-        apiUrl: 'https://workingsolutions.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'workingsolutions.brightpattern.com',
-        chatPath: 'https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/'
+        appId: '7a48336c8da043f0b393b5f84c63efe3',
+        apiUrl: 'https://supporttest.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'supporttest.brightpattern.com',
+        chatPath: 'https://supporttest.brightpattern.com/clientweb/chat-client-v4/'
     };
 </script>
 
-<script src="https://workingsolutions.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://supporttest.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form" class="sp-callback-form">
    <label>Request a callback</label>
    <label>&nbsp;</label>
@@ -132,6 +135,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <input type="tel" id="sp-callback-phone_number" placeholder="Phone" />
    <button id="sp-callback-submit">Request Call</button>
 </div>
+
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.7306319443137!2d-104.60065904903787!3d38.952981751170476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x871336edbacc6af7%3A0xf30bd9b81a792f6f!2s8361+Del+Rio+Rd%2C+Peyton%2C+CO+80831!5e0!3m2!1sen!2sus!4v1520009378533" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
